--- a/p3.html
+++ b/p3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">   
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="./sass/base/normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
