--- a/p3.html
+++ b/p3.html
@@ -18,11 +18,20 @@
         <i class="fas fa-map-marker-alt"></i>
         <h2>Paris, Belleville</h2>
     </div>
-    <div class="reservez">
+    <section class="reservez">
         <h2>Réservez le menu qui </br> vous convient</h2>
         <p>Découvrez des restaurants d'exceptions,</br> séléctionnés par nos soins</p>
         <button>Explorer nos restaurants</button>
-    </div>
+    </section>
+
+    <section class="etapes">
+        <h2>Fonctionnement</h2>
+        <ol>
+            <li>Choisissez un restaurant</li>
+            <li>Composez votre menu</li>
+            <li>Dégustez au restaurant</li>
+        </ol>
+    </section>
 </main>
 </body>
 </html>
