--- a/p3.html
+++ b/p3.html
@@ -19,8 +19,8 @@
         <h2>Paris, Belleville</h2>
     </div>
     <section class="reservez">
-        <h2>Réservez le menu qui </br> vous convient</h2>
-        <p>Découvrez des restaurants d'exceptions,</br> séléctionnés par nos soins</p>
+        <h2>Réservez le menu qui <br> vous convient</h2>
+        <p>Découvrez des restaurants d'exceptions,<br> séléctionnés par nos soins.</p>
         <button>Explorer nos restaurants</button>
     </section>
 
@@ -31,6 +31,41 @@
             <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
             <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
         </ol>
+    </section>
+
+    <section class="menus">
+         <h2>Restaurants</h2>
+        <div class="menus__cartes">
+           
+            <a href="" class="carte nouveau">
+                <div class="carte__image carte__image-1"> </div>
+                <div class="carte__description">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </div>
+            </a>
+            <a href="" class="carte nouveau">
+                <div class="carte__image carte__image-2"></div>
+                <div class="carte__description">
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
+                </div>
+            </a>
+            <a href="" class="carte nouveau">
+                <div class="carte__image carte__image-3"></div>
+                <div class="carte__description">
+                    <h3>A la française</h3>
+                    <p>Cité Rouge</p>
+                </div>
+            </a>
+            <a href="" class="carte nouveau">
+                <div class="carte__image carte__image-4"></div>
+                <div class="carte__description">
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
+                </div>
+            </a>
+        </div>
     </section>
 </main>
 </body>
