--- a/p3.html
+++ b/p3.html
@@ -42,6 +42,7 @@
                 <div class="carte__description">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
+                    <i class="far fa-heart"></i>
                 </div>
             </a>
             <a href="" class="carte nouveau">
@@ -49,24 +50,35 @@
                 <div class="carte__description">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
+                    <i class="far fa-heart"></i>
                 </div>
             </a>
-            <a href="" class="carte nouveau">
+            <a href="" class="carte">
                 <div class="carte__image carte__image-3"></div>
                 <div class="carte__description">
                     <h3>A la française</h3>
                     <p>Cité Rouge</p>
+                    <i class="far fa-heart"></i>
                 </div>
             </a>
-            <a href="" class="carte nouveau">
+            <a href="" class="carte ">
                 <div class="carte__image carte__image-4"></div>
                 <div class="carte__description">
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>
+                    <i class="far fa-heart"></i>
                 </div>
             </a>
         </div>
     </section>
 </main>
+<footer>
+    <h2>ohmyfood</h2>
+    <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
+    <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+    <a href="#">Mentions légales</a>
+    <p>
+    <a href="mailto:rhamouns@gmail.com">Contact</a>
+</footer>
 </body>
 </html>
