hearth+début resto1

--- a/p3.html
+++ b/p3.html
@@ -37,12 +37,13 @@
          <h2>Restaurants</h2>
         <div class="menus__cartes">
            
-            <a href="" class="carte nouveau">
+            <a href="./sass/pages/Menu-1.html" class="carte nouveau">
                 <div class="carte__image carte__image-1"> </div>
                 <div class="carte__description">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
-                    <i class="far fa-heart"></i>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart heart__color"></i>
                 </div>
             </a>
             <a href="" class="carte nouveau">
@@ -50,7 +51,9 @@
                 <div class="carte__description">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
-                    <i class="far fa-heart"></i>
+                       <i class="far fa-heart"></i> 
+                        <i class="fas fa-heart heart__color"></i>
+                        
                 </div>
             </a>
             <a href="" class="carte">
@@ -58,7 +61,8 @@
                 <div class="carte__description">
                     <h3>A la française</h3>
                     <p>Cité Rouge</p>
-                    <i class="far fa-heart"></i>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart heart__color"></i>
                 </div>
             </a>
             <a href="" class="carte ">
@@ -66,7 +70,8 @@
                 <div class="carte__description">
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>
-                    <i class="far fa-heart"></i>
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart heart__color"></i>
                 </div>
             </a>
         </div>
