--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -16,7 +16,11 @@
     <div class="banniere">
         <img src="../../images/restaurants/image-1.jpg" alt="">
     </div>
-
+    <main>
+        <h2>La palette du gôut</h2>
+        <i class="far fa-heart"></i>
+        <i class="fas fa-heart heart__color"></i>
+    </main>
 
     <footer>
         <h2>ohmyfood</h2>
