--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -7,7 +7,7 @@
     <title>La palette du gôut</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">   
     <link rel="stylesheet" href="../base/normalize.css">
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 <body>
     <header>
