--- a/sass/pages/p3.html
+++ b/sass/pages/p3.html
@@ -37,7 +37,7 @@
          <h2>Restaurants</h2>
         <div class="menus__cartes">
            
-            <a href="./sass/pages/Menu-1.html" class="carte nouveau">
+            <a href="../pages/Menu-1.html" class="carte nouveau">
                 <div class="carte__image carte__image-1"> </div>
                 <div class="carte__description">
                     <h3>La palette du goût</h3>
