bug image github

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="menus__cartes">
            
             <a href="./sass/pages/Menu-1.html" class="carte nouveau">
-                <div class="carte__Image carte__Image1"> </div>
+                <img class="carte__Image carte__Image1" src="./images/restaurants/Image1.jpg"> 
                 <div class="carte__description">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
@@ -47,7 +47,7 @@
                 </div>
             </a>
             <a href="" class="carte nouveau">
-                <div class="carte__Image carte__Image2"></div>
+                <img class="carte__Image carte__Image2" src="./images/restaurants/Image2.jpg">
                 <div class="carte__description">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
@@ -57,7 +57,7 @@
                 </div>
             </a>
             <a href="" class="carte">
-                <div class="carte__Image carte__Image3"></div>
+                <img class="carte__Image carte__Image3" src="./images/restaurants/Image3.jpg">
                 <div class="carte__description">
                     <h3>A la française</h3>
                     <p>Cité Rouge</p>
@@ -66,7 +66,7 @@
                 </div>
             </a>
             <a href="" class="carte ">
-                <div class="carte__Image carte__Image4"></div>
+                <img class="carte__Image carte__Image4" src="./images/restaurants/Image4.jpg">
                 <div class="carte__description">
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>
