--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
                 <div class="carte__description">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
+                    <div class="heart">
                         <i class="far fa-heart"></i>
                         <i class="fas fa-heart heart__color"></i>
+                    </div>
                 </div>
             </a>
             <a href="" class="carte nouveau">
