--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -18,8 +18,10 @@
     </div>
     <main>
         <h2>La palette du gôut</h2>
+        <div class="heart">
         <i class="far fa-heart"></i>
         <i class="fas fa-heart heart__color"></i>
+    </div>
     </main>
     <div class="test"></div>
 
