--- a/index.html
+++ b/index.html
@@ -1,91 +1,108 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">   
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="./sass/base/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
-<header>
-    <h1>ohmyfood</h1>
-</header>
-<main>
-    <div class="city">
-        <i class="fas fa-map-marker-alt"></i>
-        <h2>Paris, Belleville</h2>
-    </div>
-    <section class="reservez">
-        <h2>Réservez le menu qui <br> vous convient</h2>
-        <p>Découvrez des restaurants d'exceptions,<br> séléctionnés par nos soins.</p>
-        <button>Explorer nos restaurants</button>
-    </section>
+    <header>
+        <h1>ohmyfood</h1>
+    </header>
+    <main>
+        <div class="city">
+            <i class="fas fa-map-marker-alt"></i>
+            <h2>Paris, Belleville</h2>
+        </div>
+        <section class="reservez">
+            <h2>Réservez le menu qui <br> vous convient</h2>
+            <p>Découvrez des restaurants d'exceptions,<br> séléctionnés par nos soins.</p>
+            <button>Explorer nos restaurants</button>
+        </section>
 
-    <section class="etapes">
-        <h2>Fonctionnement</h2>
-        <ol>
-            <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-            <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
-            <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
-        </ol>
-    </section>
+        <section class="etapes">
+            <h2>Fonctionnement</h2>
+            <ol>
+                <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+                <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+            </ol>
+        </section>
 
-    <section class="menus">
-         <h2>Restaurants</h2>
-        <div class="menus__cartes">
-           
-            <a href="./sass/pages/Menu-1.html" class="carte nouveau">
-                <img class="carte__Image carte__Image1" src="./images/restaurants/Image1.jpg"> 
-                <div class="carte__description">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
-                    <div class="heart">
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart heart__color"></i>
-                    </div>
+        <section class="menus">
+            <h2>Restaurants</h2>
+            <div class="menus__cartes">
+
+                <a href="./sass/pages/Menu-1.html" class="carte nouveau">
+                    <img class="carte__Image carte__Image1" src="./images/restaurants/Image1.jpg">
+                    <div class="carte__description">
+                </a>
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
+
+                <div class="heart">
+                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart heart__color"></i>
                 </div>
-            </a>
+            </div>
+
             <a href="" class="carte nouveau">
                 <img class="carte__Image carte__Image2" src="./images/restaurants/Image2.jpg">
                 <div class="carte__description">
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
-                       <i class="far fa-heart"></i> 
-                        <i class="fas fa-heart heart__color"></i>
-                        
-                </div>
             </a>
+            <h3>La note enchantée</h3>
+            <p>Charonne</p>
+
+            <div class="heart">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-heart heart__color"></i>
+            </div>
+            </div>
+
             <a href="" class="carte">
                 <img class="carte__Image carte__Image3" src="./images/restaurants/Image3.jpg">
                 <div class="carte__description">
-                    <h3>A la française</h3>
-                    <p>Cité Rouge</p>
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart heart__color"></i>
-                </div>
+
             </a>
+            <h3>A la française</h3>
+            <p>Cité Rouge</p>
+
+            <div class="heart">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-heart heart__color"></i>
+            </div>
+            </div>
+
             <a href="" class="carte ">
                 <img class="carte__Image carte__Image4" src="./images/restaurants/Image4.jpg">
                 <div class="carte__description">
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart heart__color"></i>
-                </div>
             </a>
-        </div>
-    </section>
-</main>
-<footer>
-    <h2>ohmyfood</h2>
-    <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-    <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-    <a href="#">Mentions légales</a>
-    <p>
-    <a href="mailto:rhamouns@gmail.com">Contact</a>
-</footer>
+            <h3>Le délice des sens</h3>
+            <p>Folie-Méricourt</p>
+            <div class="heart">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-heart heart__color"></i>
+            </div>
+            </div>
+
+            </div>
+        </section>
+    </main>
+    <footer>
+        <h2>ohmyfood</h2>
+        <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
+        <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+        <a href="#">Mentions légales</a>
+        <p>
+            <a href="mailto:rhamouns@gmail.com">Contact</a>
+    </footer>
 </body>
+
 </html>
