--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La palette du gôut</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">   
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="../base/normalize.css">
     <link rel="stylesheet" href="../../style/style.css">
 </head>
+
 <body>
     <header>
         <h1>ohmyfood</h1>
@@ -19,9 +22,9 @@
     <main>
         <h2>La palette du gôut</h2>
         <div class="heart">
-        <i class="far fa-heart"></i>
-        <i class="fas fa-heart heart__color"></i>
-    </div>
+            <i class="far fa-heart"></i>
+            <i class="fas fa-heart heart__color"></i>
+        </div>
     </main>
     <div class="test"></div>
 
@@ -31,7 +34,8 @@
         <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
         <a href="#">Mentions légales</a>
         <p>
-        <a href="mailto:rhamouns@gmail.com">Contact</a>
+            <a href="mailto:rhamouns@gmail.com">Contact</a>
     </footer>
 </body>
+
 </html>
