début la palette du gôut

--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -19,15 +19,27 @@
     <div class="banniere">
         <img src="../../images/restaurants/Image1.jpg" alt="">
     </div>
-    <main>
+    <div class="menu__title">
         <h2>La palette du gôut</h2>
         <div class="heart">
             <i class="far fa-heart"></i>
             <i class="fas fa-heart heart__color"></i>
         </div>
+    </div>
+    <main class="main-categorie">
+    <section class="commandez">
+        <div class="commandez__categorie">
+            <h3>Entrées</h3>
+            <div class="commandez-choix">
+                <h4>Fricassée d'escargot</h4>
+                <p>Au pimet d'espelette</p>
+                <p class="prix">25€</p>
+            </div>
+        </div>
+        <div class="commandez__categorie">Plat</div>
+        <div class="commandez__categorie">Desert</div>
+    </section>
     </main>
-    <div class="test"></div>
-
     <footer>
         <h2>ohmyfood</h2>
         <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
