--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="stylesheet" href="./sass/base/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -48,8 +47,8 @@
                 <p>Ménilmontant</p>
 
                 <div class="heart">
-                    <i class="far fa-heart"></i>
-                    <i class="fas fa-heart heart__color"></i>
+                    <i class="fa-thin fa-heart"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
             </div>
 
@@ -61,8 +60,8 @@
             <p>Charonne</p>
 
             <div class="heart">
-                <i class="far fa-heart"></i>
-                <i class="fas fa-heart heart__color"></i>
+                <i class="fa-thin fa-heart"></i>
+                <i class="fas fa-heart "></i>
             </div>
             </div>
 
@@ -75,8 +74,8 @@
             <p>Cité Rouge</p>
 
             <div class="heart">
-                <i class="far fa-heart"></i>
-                <i class="fas fa-heart heart__color"></i>
+                <i class="fa-thin fa-heart"></i>
+                <i class="fas fa-heart"></i>
             </div>
             </div>
 
@@ -87,8 +86,8 @@
             <h3>Le délice des sens</h3>
             <p>Folie-Méricourt</p>
             <div class="heart">
-                <i class="far fa-heart"></i>
-                <i class="fas fa-heart heart__color"></i>
+                <i class="fa-thin fa-heart"></i>
+                <i class="fas fa-heart"></i>
             </div>
             </div>
 
