--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La palette du gôut</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="stylesheet" href="../base/normalize.css">
     <link rel="stylesheet" href="../../style/style.css">
 </head>
@@ -22,24 +21,30 @@
     <div class="menu__title">
         <h2>La palette du gôut</h2>
         <div class="heart">
-            <i class="far fa-heart"></i>
+            <i class="fa-thin fa-heart"></i>
             <i class="fas fa-heart heart__color"></i>
         </div>
     </div>
     <main class="main-categorie">
-    <section class="commandez">
-        <div class="commandez__categorie">
+        <section class="commandez">
             <h3>Entrées</h3>
-            <div class="commandez-choix">
-                <h4>Fricassée d'escargot</h4>
-                <p>Au pimet d'espelette</p>
-                <p class="prix">25€</p>
+            <div class="commandez__categorie">
+                <div class="commandez-choix">
+                    <div class="commandez-choix__description">
+                        <h4>Fricassée d'escargot</h4>
+                        <p>Au pimet d'espelette</p>
+                    </div>
+                    <p class="commandez-choix__prix">25€</p>
+                    <div class="commandez-choix__check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="commandez__categorie">Plat</div>
-        <div class="commandez__categorie">Desert</div>
-    </section>
+            <div class="commandez__categorie">Plat</div>
+            <div class="commandez__categorie">Desert</div>
+        </section>
     </main>
+    
     <footer>
         <h2>ohmyfood</h2>
         <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
