--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -27,7 +27,7 @@
     </div>
     <main class="main-categorie">
         <section class="commandez">
-            <h3>Entrées</h3>
+            <h3>ENTRÉES</h3>
             <div class="commandez__categorie">
                 <div class="commandez-choix">
                     <div class="commandez-choix__description">
@@ -39,9 +39,93 @@
                         <i class="fas fa-check"></i>
                     </div>
                 </div>
+                <div class="commandez-choix">
+                    <div class="commandez-choix__description">
+                        <h4>Foie gras de canard mi-cuit</h4>
+                        <p>Et ses copeaux de truffe noire</p>
+                    </div>
+                    <p class="commandez-choix__prix">35€</p>
+                    <div class="commandez-choix__check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
+                <div class="commandez-choix">
+                    <div class="commandez-choix__description">
+                        <h4>Oeuf au plat</h4>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                    <p class="commandez-choix__prix">20€</p>
+                    <div class="commandez-choix__check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
             </div>
-            <div class="commandez__categorie">Plat</div>
-            <div class="commandez__categorie">Desert</div>
+            <h3>PLATS</h3>
+            <div class="commandez__categorie">
+                <div class="commandez-choix">
+                    <div class="commandez-choix__description">
+                        <h4>Filet de boeuf au herbes</h4>
+                        <p>Accompagné de sa ribambelle de légume</p>
+                    </div>
+                    <p class="commandez-choix__prix">40€</p>
+                    <div class="commandez-choix__check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
+                <div class="commandez-choix">
+                    <div class="commandez-choix__description">
+                        <h4>Parmentier de queue de boeuf</h4>
+                        <p>A la truffe noire sur sa purée de panais</p>
+                    </div>
+                    <p class="commandez-choix__prix">35€</p>
+                    <div class="commandez-choix__check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
+                <div class="commandez-choix">
+                    <div class="commandez-choix__description">
+                        <h4>Filet de Turbot</h4>
+                        <p>Au agrumes</p>
+                    </div>
+                    <p class="commandez-choix__prix">44€</p>
+                    <div class="commandez-choix__check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
+            </div>
+            <h3>DESSERTS</h3>
+            <div class="commandez__categorie">
+                <div class="commandez-choix">
+                    <div class="commandez-choix__description">
+                        <h4>Paris-Brest</h4>
+                        <p>Revisité</p>
+                    </div>
+                    <p class="commandez-choix__prix">18€</p>
+                    <div class="commandez-choix__check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
+                <div class="commandez-choix">
+                    <div class="commandez-choix__description">
+                        <h4>Macaron au chocolat d'exception</h4>
+                        <p>Et glace à la vanille de Madagascar</p>
+                    </div>
+                    <p class="commandez-choix__prix">22€</p>
+                    <div class="commandez-choix__check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
+                <div class="commandez-choix">
+                    <div class="commandez-choix__description">
+                        <h4>Mousse au chocolat</h4>
+                        <p>Au pimet d'espelette et à la truffe noire</p>
+                    </div>
+                    <p class="commandez-choix__prix">23€</p>
+                    <div class="commandez-choix__check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     
