--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -127,6 +127,9 @@
                 </div>
             </div>
         </section>
+        <section class="order">
+            <button>commandez</button>
+        </section>
     </main>
     
     <footer>
