--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./images/favicon/site.webmanifest">
     <title>ohmyfood</title>
-        <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="stylesheet" href="./sass/base/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -40,11 +44,42 @@
             <div class="menus__cartes">
 
                 <a href="./sass/pages/Menu-1.html" class="carte nouveau">
-                    <img class="carte__Image carte__Image1" src="./images/restaurants/Image1.jpg">
-                    <div class="carte__description">
+                    <img class="carte__Image carte__Image1" src="./images/restaurants/Image1.jpg" alt="">
+
                 </a>
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
+                <div class="carte__description">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+
+                    <div class="heart">
+                        <i class="fa-thin fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </div>
+                </div>
+            </div>
+
+            <a href="" class="carte nouveau">
+                <img class="carte__Image carte__Image2" src="./images/restaurants/Image2.jpg" alt="">
+            </a>
+            <div class="carte__description">
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+
+                <div class="heart">
+                    <i class="fa-thin fa-heart"></i>
+                    <i class="fas fa-heart "></i>
+                </div>
+            </div>
+
+
+            <a href="" class="carte">
+                <img class="carte__Image carte__Image3" src="./images/restaurants/Image3.jpg" alt="">
+
+
+            </a>
+            <div class="carte__description">
+                <h3>A la française</h3>
+                <p>Cité Rouge</p>
 
                 <div class="heart">
                     <i class="fa-thin fa-heart"></i>
@@ -52,46 +87,20 @@
                 </div>
             </div>
 
-            <a href="" class="carte nouveau">
-                <img class="carte__Image carte__Image2" src="./images/restaurants/Image2.jpg">
-                <div class="carte__description">
-            </a>
-            <h3>La note enchantée</h3>
-            <p>Charonne</p>
-
-            <div class="heart">
-                <i class="fa-thin fa-heart"></i>
-                <i class="fas fa-heart "></i>
-            </div>
-            </div>
-
-            <a href="" class="carte">
-                <img class="carte__Image carte__Image3" src="./images/restaurants/Image3.jpg">
-                <div class="carte__description">
-
-            </a>
-            <h3>A la française</h3>
-            <p>Cité Rouge</p>
-
-            <div class="heart">
-                <i class="fa-thin fa-heart"></i>
-                <i class="fas fa-heart"></i>
-            </div>
-            </div>
 
             <a href="" class="carte ">
-                <img class="carte__Image carte__Image4" src="./images/restaurants/Image4.jpg">
-                <div class="carte__description">
+                <img class="carte__Image carte__Image4" src="./images/restaurants/Image4.jpg" alt="">
+
             </a>
-            <h3>Le délice des sens</h3>
-            <p>Folie-Méricourt</p>
-            <div class="heart">
-                <i class="fa-thin fa-heart"></i>
-                <i class="fas fa-heart"></i>
-            </div>
+            <div class="carte__description">
+                <h3>Le délice des sens</h3>
+                <p>Folie-Méricourt</p>
+                <div class="heart">
+                    <i class="fa-thin fa-heart"></i>
+                    <i class="fas fa-heart"></i>
+                </div>
             </div>
 
-            </div>
         </section>
     </main>
     <footer>
