--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 <body>
     <header>
+        <div class="loader">
+            
+        </div>
         <h1>ohmyfood</h1>
     </header>
     <main>
