--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
 
-            <a href="" class="carte nouveau">
+            <a href="./sass/pages/Menu-2.html" class="carte nouveau">
                 <img class="carte__Image carte__Image2" src="./images/restaurants/Image2.jpg" alt="">
             </a>
             <div class="carte__description">
@@ -75,7 +75,7 @@
             </div>
 
 
-            <a href="" class="carte">
+            <a href="./sass/pages/Menu-3.html" class="carte">
                 <img class="carte__Image carte__Image3" src="./images/restaurants/Image3.jpg" alt="">
 
 
@@ -91,7 +91,7 @@
             </div>
 
 
-            <a href="" class="carte ">
+            <a href="./sass/pages/Menu-4.html" class="carte ">
                 <img class="carte__Image carte__Image4" src="./images/restaurants/Image4.jpg" alt="">
 
             </a>
