--- a/index.html
+++ b/index.html
@@ -15,11 +15,21 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body>
-    <header>
-        <div class="loader">
-            
+<body><div class="loader">
+            <span class="letter">O</span>
+            <span class="letter">H</span>
+            <span class="letter">M</span>
+            <span class="letter">Y</span>
+            <span class="letter">F</span>
+            <span class="letter">O</span>
+            <span class="letter">O</span>
+            <span class="letter">D</span>
+            <span class="letter">.</span>
+            <span class="letter">.</span>
+            <span class="letter">.</span>
         </div>
+    <header>
+        
         <h1>ohmyfood</h1>
     </header>
     <main>
@@ -29,7 +39,7 @@
         </div>
         <section class="reservez">
             <h2>Réservez le menu qui <br> vous convient</h2>
-            <p>Découvrez des restaurants d'exceptions,<br> séléctionnés par nos soins.</p>
+            <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins.</p>
             <button>Explorer nos restaurants</button>
         </section>
 
@@ -111,8 +121,7 @@
         <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
         <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
         <a href="#">Mentions légales</a>
-        <p>
-            <a href="mailto:rhamouns@gmail.com">Contact</a>
+        <a href="mailto:rhamouns@gmail.com">Contact</a>
     </footer>
 </body>
 
