--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body><div class="loader">
-            <span class="letter">O</span>
-            <span class="letter">H</span>
-            <span class="letter">M</span>
-            <span class="letter">Y</span>
-            <span class="letter">F</span>
-            <span class="letter">O</span>
-            <span class="letter">O</span>
-            <span class="letter">D</span>
-            <span class="letter">.</span>
-            <span class="letter">.</span>
-            <span class="letter">.</span>
-        </div>
+<body>
+    <div class="loader">
+        <span class="letter">O</span>
+        <span class="letter">H</span>
+        <span class="letter">M</span>
+        <span class="letter">Y</span>
+        <span class="letter">F</span>
+        <span class="letter">O</span>
+        <span class="letter">O</span>
+        <span class="letter">D</span>
+        <span class="letter">.</span>
+        <span class="letter">.</span>
+        <span class="letter">.</span>
+    </div>
     <header>
-        
+
         <h1>ohmyfood</h1>
     </header>
     <main>
@@ -57,63 +58,64 @@
             <div class="menus__cartes">
 
                 <a href="./sass/pages/Menu-1.html" class="carte nouveau">
-                    <img class="carte__Image carte__Image1" src="./images/restaurants/Image1.jpg" alt="">
+                    <img class="carte__Image" src="./images/restaurants/Image1.jpg" alt="La palette du goût">
+                    <div class="carte__description">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
 
-                </a>
-                <div class="carte__description">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
-
-                    <div class="heart">
-                        <i class="fa-thin fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <div class="heart">
+                            <i class="fa-thin fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
                     </div>
-                </div>
+                </a>
+
+
+
+                <a href="./sass/pages/Menu-2.html" class="carte nouveau">
+                    <img class="carte__Image" src="./images/restaurants/Image2.jpg" alt="La note enchantée">
+                    <div class="carte__description">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+
+                        <div class="heart">
+                            <i class="fa-thin fa-heart"></i>
+                            <i class="fas fa-heart "></i>
+                        </div>
+                    </div>
+                </a>
+
+
+
+                <a href="./sass/pages/Menu-3.html" class="carte">
+                    <img class="carte__Image" src="./images/restaurants/Image3.jpg" alt="A la française">
+
+                    <div class="carte__description">
+                        <h3>A la française</h3>
+                        <p>Cité Rouge</p>
+
+                        <div class="heart">
+                            <i class="fa-thin fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+
+
+
+                <a href="./sass/pages/Menu-4.html" class="carte ">
+                    <img class="carte__Image" src="./images/restaurants/Image4.jpg" alt="Le délice des sens">
+                    <div class="carte__description">
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                        <div class="heart">
+                            <i class="fa-thin fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+
             </div>
-
-            <a href="./sass/pages/Menu-2.html" class="carte nouveau">
-                <img class="carte__Image carte__Image2" src="./images/restaurants/Image2.jpg" alt="">
-            </a>
-            <div class="carte__description">
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
-
-                <div class="heart">
-                    <i class="fa-thin fa-heart"></i>
-                    <i class="fas fa-heart "></i>
-                </div>
-            </div>
-
-
-            <a href="./sass/pages/Menu-3.html" class="carte">
-                <img class="carte__Image carte__Image3" src="./images/restaurants/Image3.jpg" alt="">
-
-
-            </a>
-            <div class="carte__description">
-                <h3>A la française</h3>
-                <p>Cité Rouge</p>
-
-                <div class="heart">
-                    <i class="fa-thin fa-heart"></i>
-                    <i class="fas fa-heart"></i>
-                </div>
-            </div>
-
-
-            <a href="./sass/pages/Menu-4.html" class="carte ">
-                <img class="carte__Image carte__Image4" src="./images/restaurants/Image4.jpg" alt="">
-
-            </a>
-            <div class="carte__description">
-                <h3>Le délice des sens</h3>
-                <p>Folie-Méricourt</p>
-                <div class="heart">
-                    <i class="fa-thin fa-heart"></i>
-                    <i class="fas fa-heart"></i>
-                </div>
-            </div>
-
         </section>
     </main>
     <footer>
