--- a/sass/pages/Menu-2.html
+++ b/sass/pages/Menu-2.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="banniere">
-        <img class="dimension" src="../../images/restaurants/Image2.jpg" alt="">
+        <img class="dimension" src="../../images/restaurants/Image2.jpg" alt="La note enchantée">
     </div>
     <div class="menu__title">
         <h2>La note enchantée</h2>
