--- a/sass/pages/Menu-3.html
+++ b/sass/pages/Menu-3.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="banniere">
-        <img src="../../images/restaurants/Image3.jpg" alt="">
+        <img src="../../images/restaurants/Image3.jpg" alt="À la française">
     </div>
     <div class="menu__title">
         <h2>À la française</h2>
