--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="banniere">
-        <img src="../../images/restaurants/Image1.jpg" alt="">
+        <img src="../../images/restaurants/Image1.jpg" alt="La palette du gôut">
     </div>
     <div class="menu__title">
         <h2>La palette du gôut</h2>
