--- a/sass/pages/Menu-4.html
+++ b/sass/pages/Menu-4.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="banniere">
-        <img src="../../images/restaurants/Image4.jpg" alt="">
+        <img src="../../images/restaurants/Image4.jpg" alt="Le déclice des sens">
     </div>
     <div class="menu__title">
         <h2>Le déclice des sens</h2>
