--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <div class="city">
             <i class="fas fa-map-marker-alt"></i>
-            <h2>Paris, Belleville</h2>
+            <input type="search" placeholder="Paris, Belleville" class="css-input">
         </div>
         <section class="reservez">
             <h2>Réservez le menu qui <br> vous convient</h2>
