--- a/sass/pages/Menu-1.html
+++ b/sass/pages/Menu-1.html
@@ -40,7 +40,7 @@
                 <div class="commandez-choix">
                     <div class="commandez-choix__description">
                         <h4>Fricassée d'escargot</h4>
-                        <p>Au pimet d'espelette</p>
+                        <p>Au piment d'espelette</p>
                     </div>
                     <p class="commandez-choix__prix">25€</p>
                     <div class="commandez-choix__check">
@@ -74,7 +74,7 @@
                 <div class="commandez-choix">
                     <div class="commandez-choix__description">
                         <h4>Filet de boeuf au herbes</h4>
-                        <p>Accompagné de sa ribambelle de légume</p>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <p class="commandez-choix__prix">40€</p>
                     <div class="commandez-choix__check">
